css/kuda.css
body {
    padding: 0;
}

#intro {
    height: 700px;
    background: #080 url(background.jpg) no-repeat center center; 
    -webkit-background-size: cover;
    -moz-background-size: cover;
    -o-background-size: cover;
    background-size: cover;
    position: relative;
    text-align: center;
}

#intro div.logo {
    text-align: left;
    position: absolute;    
}

#intro h1 a {
    color: white;
    text-decoration: none;
    font-family: 'Ubuntu Mono';
    font-size: 36pt;
}

#slogan {
    font-size: 36pt;
    color: white;
    width: 50%;
    position: relative;
    margin: 0 auto;
    font-family: 'Sofadi One', cursive;
    top: 100px;
    padding-bottom: 60px;
}

#perfiles {
    color: #fff;
    text-align: center;
    background-color: #080;
    background: url(muffet-green.jpg) repeat top center;     
}

#perfiles div.content {
    width: 300px;
    margin: 0 auto;
    padding: 10px;
    margin-top: 20px;
    background-color: white;
    border-radius: 15px;
    -moz-border-radius: 15px;
    -webkit-border-radius: 15px;
    box-shadow: 5px 5px 5px 0px rgba(0,0,0,0.75);    
    -webkit-box-shadow: 5px 5px 5px 0px rgba(0,0,0,0.75);
    -moz-box-shadow: 5px 5px 5px 0px rgba(0,0,0,0.75);    
}

#perfiles h2 {
    padding-top: 0;
    margin-top: 0;
}

#contacto {
    text-align: center;
}

#contacto iframe {
    width: 600px;
    margin: 0 auto;
    padding: 5px;
    background-color: white;
    border: 1px solid lightgray;
    border-radius: 15px;
    -moz-border-radius: 15px;
    -webkit-border-radius: 15px;
    box-shadow: 5px 5px 5px 0px rgba(0,0,0,0.75);    
    -webkit-box-shadow: 5px 5px 5px 0px rgba(0,0,0,0.75);
    -moz-box-shadow: 5px 5px 5px 0px rgba(0,0,0,0.75);
}

div.border_top {
    height: 13px;				
    width: 100%;
    position: relative;
    background: url(border_top.png) repeat top center; 
}

div.border_bottom {
    height: 13px;
    width: 100%;
    position: relative;
    background: url(border_bottom.png) repeat top center; 
}

/* ----- Navigation menu ----- */

#menu_container {
    position: relative;
    top: -41px;
}
 
#main_menu {
    position: absolute;
    width: 390px;
    right: 0;
    border-top-left-radius: 15px;
    -moz-top-radius-bottomleft: 15px;
    -webkit-top-bottom-left-radius: 15px;
}

.menu_simple {
    width: 100%;
    background-color: #aaffaa;
}
 
.menu_simple ul {
    padding: 0;
    margin: 0;
    float: left;
    margin-left: 14px;
}
 
.menu_simple ul li {
    display: inline;
}
 
.menu_simple ul li a {
    float: left; 
    color: #060;
    font-weight: bold;
    padding: 11px 20px;
    text-decoration: none;
    text-shadow: 2px 2px 2px rgba(0, 80, 0, 0.4);
}
 
.menu_simple ul li a:visited {
    color: white;
}
 
.menu_simple ul li a:hover, .menu_simple ul li .current {
    color: white;
    background-color: #5FD367;
}

@media (max-width: 390px) {
    #main_menu {
        width: 100%;
        border-top-left-radius: 0;
        -moz-top-radius-bottomleft: 0;
        -webkit-top-bottom-left-radius: 0;
    }

    div.moving #main_menu {
        border-bottom-right-radius: 15px;
        -moz-border-radius-bottomright: 15px;
        -webkit-border-bottom-right-radius: 15px;
    }
    
    .menu_simple ul li a {
        padding: 11px 16px;
    }
}

div.moving {
    opacity: 0.9;
}

div.moving #main_menu {
    border-top-left-radius: 0;
    -moz-top-radius-bottomleft: 0;
    -webkit-top-bottom-left-radius: 0;
    border-bottom-left-radius: 15px;
    -moz-border-radius-bottomleft: 15px;
    -webkit-border-bottom-left-radius: 15px;
}

/* ----- Miscellaneous ----- */

h2 a {
    color: black;
    text-decoration: none;
    font-family: 'Sofadi One', cursive;
    margin-left: 20px;
}

p.nice {
    margin-left: 40px;
    font-family: Arial, Verdana;
    font-size: 11pt;
}
div.row {
    margin-left: 0;
    margin-right: 0;
}

div.proyecto {
    font-family: Arial, Verdana;
    font-size: 11pt;
    position: relative;
}

div.proyecto td {
    vertical-align: top;
}

div.proyecto td.first {
    font-weight: bold;
    text-align: right;
    padding-right: 5px;
}

div.proyecto > div {
    line-height: 25px;
}

div.proyecto td.second {
}

div.descripcion {
}

div.icono {
    float: left;
    margin-right: 10px;
	position: relative;
}

div.icono img.sticker {
	position: absolute;
	bottom: 0;
	right: 0;
}

div.contact {
    float: right;
    text-align: center;
    font-size: 11pt;
    margin-right: 5px;
    margin-top: 5px;
}

span.foto_no_diponible {
    width: 96px;
    height: 96px;
    border: 1px solid gray;
    display: block;
}

img.iconito {
    position: relative;
    bottom: 1px;
}

div.proyecto div.panel-heading{
    padding-top: 3px;
    padding-bottom: 3px;
}

div.proyecto div.panel-heading a {
    color: black;
    text-decoration: none;
    padding-top: 3px;
}

span.label.label-info a {
    color: white;
    text-decoration: none;
}

